@@ -1566,7 +1566,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
 
     @Override
     public int nextPosition() throws IOException {
-      assert false : "Shouldn't be calling nextPosition() if you haven't asked for positions";
       return -1;
     }
 
@@ -1655,7 +1654,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
 
     @Override
     public int nextPosition() throws IOException {
-      assert false : "Shouldn't be calling nextPosition() if you haven't asked for positions";
       return -1;
     }
 
@@ -1760,7 +1758,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
 
     @Override
     public int nextPosition() throws IOException {
-      assert false : "should be using LowFreqDocsAndPositionsEnum";
       return -1;
     }
 
